--- a/ContentWeb/web/styles/styleWeb.css
+++ b/ContentWeb/web/styles/styleWeb.css
@@ -1,24 +1,37 @@
+/* scroll suave */
+html{
+    scroll-behavior: smooth;
+}
+
+:target{
+    scroll-margin-top:8em ;
+}
+
 body{
     margin:0;
     padding: 0;
     border: 0;
     font-family: 'Rajdhani', 'Manrope', sans-serif;
-    width: 98vw;
+    width: 98.7vw;
     position: relative;
 }
 
 a{
     text-decoration: none;
 }
+
 .sectionInitial{
     width: 100%;
     height:100vh;
     margin-bottom: 10%;
 }
+
 .divBlur{
     position: absolute;
-    width: 60vw;height: 90vh; 
-    left: 0;top:-10%;
+    width: 60vw;
+    height: 140vh; 
+    left: 0;
+    top:-10%;
     border-radius: 0 0 1000px ; 
     background-color: #cb8c17;
     opacity:30%; 
@@ -29,6 +42,7 @@ a{
     -moz-filter:blur(15px);
     -webkit-filter:blur(15px);  
 }
+
 .navbar{
     width: 100%;
     height: 10%;
@@ -55,6 +69,8 @@ a{
     list-style: none;
     cursor: pointer;
     transition: 500ms;
+    font-size: 1.1rem;
+    color: black;
 }
 
 .navbar ul li:hover{
@@ -62,6 +78,7 @@ a{
     
     color: #71634E;
 }
+
 .divLogo {
     width: 35%;
     display: flex;
@@ -73,6 +90,7 @@ a{
     width: 18%;
     margin-right: 4%;
 }
+
 .divLogo p{
     font-weight: 800;
 }
@@ -85,10 +103,12 @@ a{
     gap: 5%;
     font-size: 20px;
 }
+
 .user p:hover{
     transition: 500ms;
     cursor: pointer;
 }
+
 .user p:hover{
     transform: translateY(-1.5px);
     color: #71634E;
@@ -103,7 +123,6 @@ a{
     color: #71634E;
     transform: scale(1.1)
 }
-
 
 .contentInitial{
     width: 100%;
@@ -136,14 +155,16 @@ a{
 .maintext button{
     font-size: 1.4rem;
     font-weight: 600;
-    padding: 5%;
-    color: #8B601F;
+    padding: 10%;
     background-color: transparent;
     border: 2px #8B601F  solid;
     border-radius: 10px;
-    margin-top: 5%;
+    margin-top: 40%;
     transition: 500ms;
+    color: #8B601F;
     cursor: pointer;
+    text-align: center;
+    white-space: nowrap;
  }
 
  .maintext button:hover{
@@ -175,6 +196,7 @@ a{
     align-items: center;
     justify-content: center;
 }
+
 .divImgJustificativa{
     width: 50%;
     height: 100%;
@@ -190,6 +212,7 @@ a{
     border-radius: 50px;
 
 }
+
 .divContentJustificativa{
     width: 50%;
     height: 100%;
@@ -232,6 +255,7 @@ a{
     /* border: 0.5px  gray solid; */
     box-shadow:-1px 8px 10px 2px  #d1cfcf;  
 }
+
 .card h2{
     margin: 0;
     padding: 0;
@@ -256,7 +280,10 @@ a{
     align-items: center;
     flex-direction: column;
     color: white;
+    background-image: url("../imgs/imgFundoContrate.jpeg");
+    background-repeat: no-repeat;
 }
+
 .h2Contratar{
     font-size: 2.5rem;
     margin: 0;
@@ -269,11 +296,16 @@ a{
 
 .imgContratar button{
     padding: 1% 2% 1% 2%;
-    background-color: #012540;
+    background-color: #71634E;
     border-style: none;
     font-size: 1.5rem;
     border-radius: 25px;
     color: white;
+    cursor: pointer;
+    transition: 500ms;
+}
+.imgContratar button:hover{
+    background-color: #3f3c38;
 }
 
 /*  */
@@ -361,7 +393,7 @@ a{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color:#F8F9FD ;
+    background-color:rgb(224, 222, 209) ;
     border-radius: 30px;
 }
 .divCalcItem h1{
@@ -375,12 +407,17 @@ a{
 
 .divCalcItem button{
     font-size: 1.2rem;
-    border-style: none;
     padding: 3% 5%;
     background-color: #9F8153;
+    border-style: none;
     border-radius: 8px;
     color: white;
+    transition: 500ms;
+    cursor: pointer;
+}
 
+.divCalcItem button:hover{
+    background-color: #74654e;
 }
 
 .divTestemunhos{
@@ -389,12 +426,12 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 10%;
 }
 
 .divTestemunhosContent{
     display:flex;
     width: 90%;
-    background-color: red;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -410,24 +447,158 @@ a{
     text-align: center;
     width: 100%;
     height: 20%;
+    margin-bottom: 8%;
 }
 
 .titleSubtitle h1{
     margin: 0;
 }
+.titleSubtitle h5{
+    margin: 0;
+    font-size: 1.2rem;
+    color: #9F8153;
+    margin-bottom: 1%;
+    font-family: 'Manrope';
+}
 
 .divAvaliacoes{
-    width: 38%;
+    width: 30%;
     height: 50%;
     display: flex;
     justify-content:center;
     align-items: center;
     flex-direction: column;
-    
-
+}
+.divIconsTestemunhos{
+    width: 100%;
+    color:#9F8153 ;
 }
 
+.divStars{
+    margin-top: 5%;
+    display: flex;
+    gap: 2%;
+}
 .divAvaliacoesIdentidade{
     height: 30%;
-    width: 38%;
+    width: 30%;
 }
+
+.divAvaliacoesIdentidade h5{
+    margin-bottom: 0;
+    font-size: 1.1rem;
+}
+.divAvaliacoesIdentidade p{
+    margin: 0;
+}
+
+/*my team*/
+
+.divNossoTime{
+    width: 100%;
+    height: 70vh;
+    background-color: #012540;
+    display: flex;
+}
+
+.divTextosMinhaEquipe{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+.divsFotos{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    gap:1%; 
+}
+
+.itemTeam{
+    width: 30%;
+    height: 44%;
+    border-radius: 20px;
+    background: rgba( 255, 255, 255, 0.25 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+}
+
+/* footer */
+footer{
+    width: 100%;
+    height:60vh;
+}
+
+.divContentItemsFooter{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    gap: 2%;
+}
+
+.itemsFooter{
+    width: 20%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+}
+.itemsFooter h3{
+    font-weight: 900;
+    font-size: 1.5rem;
+}
+.itemsFooter span{
+    color:#757095 ;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.itemsFooter a{
+    font-size: 1.3rem;
+    font-weight: 900;
+    color: #181433;
+    cursor: pointer;
+}
+.itemsFooter a:hover{
+    color: #433d68;
+}
+.itemsFooter:first-child{
+    margin-left: 10%;
+}
+.divIconsFooter{
+    display: flex;
+    padding-top: 20%;
+    width: 100%;
+    gap: 5%;
+    font-size: 1.3rem;
+    color: #3734A9;
+}
+
+.divIconsFooter i{
+    cursor: pointer;
+}
+
+.divIconsFooter i:hover{
+    color: #1b14e0;
+}
+
+.divCopy{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    height: 20%;
+    padding: 0 0 1% 0;
+    font-weight: 900;
+}
+
