Correção: Sensor 4 estava duplicado

--- a/ContentWeb/dashBoard/style/style1.css
+++ b/ContentWeb/dashBoard/style/style1.css
@@ -408,7 +408,7 @@
 .divInfoAlarm.normal {
     background-color: #2DB5B2;
 }
-/* alerta */
+/* alertas */
 .itemCardAlarm.alerta h2{
     color: #DBBA01;
 }
