--- a/ContentWeb/public/web/styles/styleLogin.css
+++ b/ContentWeb/public/web/styles/styleLogin.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Barlow', "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Rajdhani', 'Manrope', sans-serif;
   background-color: black;
 }
 
