--- a/ContentWeb/public/web/styles/styleWeb.css
+++ b/ContentWeb/public/web/styles/styleWeb.css
@@ -503,7 +503,7 @@ a{
 .divNossoTime{
     width: 100%;
     height: 70vh;
-    background-color: #012540;
+    background-color: #71634E;
     display: flex;
 }
 
