add metricas no dashboard

--- a/ContentWeb/public/dashBoard/style/style1.css
+++ b/ContentWeb/public/dashBoard/style/style1.css
@@ -117,9 +117,9 @@
 .divInfoIndex{
     width:50%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content:space-evenly ;
+    position: relative;
+    left: 190px;
+   
 }
 
 .divItemInfo{
