dashBoard virtualmente terminada - tudo funcionando//precisa refatorar o código

--- a/ContentWeb/public/dashBoard/style/style1.css
+++ b/ContentWeb/public/dashBoard/style/style1.css
@@ -275,10 +275,10 @@
     color: #F47780 ;
 } */
 .divPainelItem.umi h1 {
-    color: #2DB5B2 ;
+    /* color: #2DB5B2 ; */
 }
 .divPainelItem.umi i {
-    color: #2DB5B2 ;
+    /* color: #2DB5B2 ; */
 }
 .divPainelItem i{
     font-size: 1.4rem;
